# pre-commit-copyright-notice

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/pre_commit_copyright_notice/: __main__.py
